Solve button overflow

--- a/client/src/components/ShareComponents/Registration/Registration.css
+++ b/client/src/components/ShareComponents/Registration/Registration.css
@@ -40,7 +40,7 @@
 .log-form-container {
     display: flex;
     height: auto;
-    width: 65%;
+    width: 50rem;
     box-shadow: -2px 2px 11px 1px rgba(0,0,0,0.41);
 }
 
@@ -50,7 +50,7 @@
 
 .form-container-1 {
     width: 50%;
-    padding: 0rem 0.625rem;
+    padding: 0rem 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -114,9 +114,9 @@ form > h1 {
     color: var(--dark-turquiose);
 }
 
-.input-fields, 
+.input-fields,
 .submit-btn {
-    width: 15.625rem;
+    width: 15.625rem !important;
     height: 2.188rem !important;
     border:1px solid #f59d87;
     border-top:1px solid #3aab95;
@@ -136,7 +136,6 @@ form > h1 {
     background-color: var(--carol);
     border: none;
     border-radius: 3px;
-    height: 1.875rem;
     padding-bottom: 0.125rem;
     color: var(--light-turquiose);
     font-size: 1.125rem;
@@ -150,8 +149,30 @@ form > h1 {
 .sign-form-container {
     display: flex;
     height: auto;
-    width: 600px;
+    width: 70rem;
     box-shadow: -2px 2px 11px 1px rgba(0,0,0,0.41);
+}
+
+.signUp-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0rem 2rem;
+    width: 100%;
+}
+
+.name-container,
+.email-container,
+.password-container {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+
+#firstName,
+#sign-email,
+#sign-pass {
+    margin-right: 10px;
 }
 
 .login-h2{
@@ -162,18 +183,21 @@ form > h1 {
 }
 
 @media only screen and (max-width: 450px){
-    form {
-        width: 95%;
+
+    .log-form {
+        padding: 0rem 2rem;
+        width: 100% !important;
     }
 
     .input-fields,
-    .submit-btn {
-        width: 100%;
+    .submit-btn{
+        width: 100% !important;
     }
 }
 
 @media only screen and (max-width: 960px){
     .log-form-container {
+        width: 65%;
         flex-direction: column;
     }
 
